# bodal.dev

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY_REVIEW.md  TERMINAL_TEST_CHECKLIST.md  next.config.mjs  package-lock.json  package.json  plan.md  tailwind.config.js  test-site.js
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml.disabled  nextjs.yml  pages.yml  pages.yml.disabled  pr-check.yml  test-digital-bloom-ios.yml  test-digital-bloom-ios.yml.disabled  test-digital-bloom.yml
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/components/: Terminal.tsx  TerminalDebug.tsx
app/contact/: page.tsx
app/digital-bloom/: page.tsx
app/projects/: page.tsx
app/terminal-test/: page.tsx
apps/digital-bloom/: .gitignore  CLAUDE.md  Dockerfile.test  IOS_DEPLOYMENT.md  IOS_SIMULATOR_TESTING.md  IOS_UX_VALIDATION_PROCESS.md  MEDIA_CONTROLS_TEST.md  README_WATCHOS.md  TEST_REPORT.md  capacitor.config.ts  debug-plan.md  docker-compose.test.yml  index.html  package-lock.json  package.json  rsw.toml  tsconfig.json  vite.config.js  vitest.config.ts
apps/digital-bloom/crates/digital-bloom-ffi/: Cargo.toml  build.rs  cbindgen.toml
apps/digital-bloom/crates/digital-bloom-ffi/include/: digital_bloom.h
apps/digital-bloom/crates/digital-bloom-ffi/src/: lib.rs
apps/digital-bloom/crates/digital-bloom-wasm/: Cargo.toml
apps/digital-bloom/crates/digital-bloom-wasm/src/: lib.rs
content/blog/: hello-world.md
lib/: blog.ts
public/: CNAME  digital-bloom.html
(+80 files in other folders)
